[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Players" type="Panel" parent="."]
visible = false
margin_right = 128.0
margin_bottom = 176.0

[node name="Label" type="Label" parent="Players"]
margin_left = 8.0
margin_top = 8.0
margin_right = 124.0
margin_bottom = 22.0
text = "Awaiting Players..."

[node name="ItemList" type="ItemList" parent="Players"]
margin_left = 8.0
margin_top = 24.0
margin_right = 120.0
margin_bottom = 144.0

[node name="Start" type="Button" parent="Players"]
margin_left = 40.0
margin_top = 152.0
margin_right = 88.0
margin_bottom = 172.0
text = "Start"

[node name="Connect" type="Panel" parent="."]
margin_right = 192.0
margin_bottom = 144.0

[node name="NameLabel" type="Label" parent="Connect"]
margin_left = 8.0
margin_top = 8.0
margin_right = 50.0
margin_bottom = 22.0
text = "Name:"

[node name="IPLabel" type="Label" parent="Connect"]
margin_left = 8.0
margin_top = 72.0
margin_right = 48.0
margin_bottom = 86.0
text = "IP:"

[node name="Name" type="LineEdit" parent="Connect"]
margin_left = 16.0
margin_top = 24.0
margin_right = 128.0
margin_bottom = 48.0

[node name="IPAddress" type="LineEdit" parent="Connect"]
margin_left = 16.0
margin_top = 88.0
margin_right = 128.0
margin_bottom = 112.0

[node name="Host" type="Button" parent="Connect"]
margin_left = 136.0
margin_top = 24.0
margin_right = 178.0
margin_bottom = 48.0
text = "Host"

[node name="Join" type="Button" parent="Connect"]
margin_left = 136.0
margin_top = 88.0
margin_right = 178.0
margin_bottom = 112.0
text = "Join"

[node name="ErrorLabel" type="Label" parent="Connect"]
visible = false
margin_left = 16.0
margin_top = 120.0
margin_right = 176.0
margin_bottom = 134.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "err"

[node name="ErrorDialog" type="AcceptDialog" parent="."]
margin_right = 48.0
margin_bottom = 58.0
window_title = "警告！"

[connection signal="pressed" from="Players/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Connect/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="Connect/Join" to="." method="_on_Join_pressed"]
